# pixcore

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: pipeline.yml  pypi.yml  release.yml  test-app.yml
1. Início Rápido/: index.html
2. Tutorial/: index.html
3. Contribuição/: index.html
3. Guia CLI/: index.html
4. Contribuição/: index.html
4. Sobre/: index.html
5. Sobre/: index.html
api/CLI/: index.html
api/Config_Manager/: index.html
api/Constantes/: index.html
api/Decodificar/: index.html
api/Excessões/: index.html
api/Modelos/: index.html
api/Payload Pix/: index.html
api/Utilidades/: index.html
api/Validar Chave Pix/: index.html
assets/: icon.psd
changelog/: index.html
docs/: 1. Início Rápido.md  2. Tutorial.md  3. Contribuição.md  3. Guia CLI.md  4. Contribuição.md  4. Sobre.md  5. Sobre.md  changelog.md  index.md
docs/api/: CLI.md  Config_Manager.md  Constantes.md  Código Pix.md  Decodificar.md  Excessões.md  Modelos.md  Utilidades.md  Validar Chave Pix.md
docs/assets/: banner.psd
docs/js/: custom.js
docs/stylesheets/: extra.css
docs/templates/: cards.html
js/: custom.js
search/: search_index.json
src/pixcore/: __init__.py  brcode.py  cli.py  constants.py  exceptions.py  models.py  utils.py
stylesheets/: extra.css
tests/: test_brcode.py  test_cli.py  test_decipher.py  test_models.py  test_utils.py  test_validate.py
