[project]
name = "pixcore"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Carreiro",email = "gjvcarreiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "qrcode[pil] (>=8.2,<9.0)",
    "pillow (>=11.3.0,<12.0.0)"
]

[tool.poetry]
packages = [{include = "pixcore", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
taskipy = "^1.14.1"
rich = "^14.1.0"
blue = "^0.9.1"
isort = "^6.0.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.16"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
run = ""
docs = "mkdocs serve"
lint = "blue --diff . && isort --diff ."
test = "pytest"